# movie-recommendation-sytem

./: CMakeLists.txt  Cast.h  Director.h  Movie.h  Person.h  README.md  Writer.h  cast.cpp  data.txt  director.cpp  graphing.py  imdb_movies.csv  main.cpp  movie.cpp  movie_testing.cpp  person.cpp  writer.cpp
site/: index.html  movies.json  script.js
site/styles/: styles.css
